<resources>
    <string name="app_name">分类短信</string>
    <string name="setting">设置</string>

    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="type_contact">联系人</string>
    <string name="type_stranger">陌生人</string>
    <string name="type_service">服务号</string>
    <string name="type_notification">通知</string>

    <string name="address_send">发送给:%s</string>
    <string name="address_receive">接收自:%s</string>

    <string name="title_activity_send_sms">写信</string>

    <string name="hint_write_sms">写信</string>
    <string name="hint_input_receiver">输入收件人电话或名字\n多个电话请用,隔开</string>
    <string name="hint_search">搜索:姓名、电话、短信</string>

    <string name="prompt_input_right_phone_number">请输入正确的手机号码</string>
    <string name="insert_sim_card">请插入sim卡</string>
    <string name="no_sms_permission">app需要对应权限才能正常使用\n请同意app使用相应权限</string>
    <string name="choose_receiver">发送给:</string>
    <string name="prompt_set_default_sms">请设置app为默认短信应用</string>
    <string name="copy_sms">复制短信</string>
    <string name="delete_single_sms">删除本条短信</string>
    <string name="delete_failed">删除失败</string>
    <string name="delete_conversation">删除会话</string>
    <string name="confirm_delete_conversation">确认删除会话?</string>
    <string name="delete">删除</string>
    <string name="confirm_delete_sms">确认删除短信?</string>
    <string name="call">拨打电话</string>
    <string name="call_to">打电话给?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="classified_sms">短信</string>
    <string name="stared_sms">收藏</string>
    <string name="about">关于</string>
    <string name="author">作者: 夜风</string>
    <string name="sync_sms_db">短信同步中,请稍后…</string>
    <string name="delete_multiple_conversation">删除多个会话</string>
    <string name="choose_action">请选择操作?</string>
    <string name="choose_to_delete_conversation">自由选择删除会话</string>
    <string name="delete_contacts_conversation">删除所有联系人会话</string>
    <string name="delete_stranger_conversation">删除所有陌生人会话</string>
    <string name="delete_servers_conversation">删除所有服务号会话</string>
    <string name="delete_notification_conversation">删除所有通知类会话</string>
    <string name="delete_all_conversation">删除所有会话</string>
    <string name="confirm_delete">确认删除?</string>
    <string name="deleting">删除中,请稍后…</string>
    <string name="delete_ok">删除成功</string>
    <string name="title_activity_delete_conversation">删除会话</string>
    <string name="loading">加载中…</string>
    <string name="loading_failed">加载失败</string>
    <string name="copy_verify_code">复制验证码:</string>
    <string name="add_to_contact">添加到通信录</string>
    <string name="choose_contact">选择要添加的联系人?</string>
    <string name="select_all">全选</string>
    <string name="unselect_all">取消全选</string>
    <string name="star_sms">收藏本条短信</string>
    <string name="star_failed">收藏失败</string>
    <string name="star_success">收藏成功</string>
    <string name="ask_if_unstar_sms">取消收藏?</string>
    <string name="unstar_sms">取消收藏</string>
    <string name="copy_success">复制成功</string>
    <string name="unstar_ok">取消收藏成功</string>
    <string name="mark_all_read">已读</string>
    <string name="mark_all_sms_read">标记所有短信为已读?</string>
    <string name="has_mark_all_sms_read">已标记所有短信为已读</string>
    <string name="search">搜索</string>
    <string name="title_activity_search">搜索</string>
    <string name="prompt_no_search_result">没有搜索到对应结果</string>
    <string name="load_error">出错了</string>
    <string name="title_activity_settings">设置</string>
    <string name="setting_service_center_number">信息中心号码</string>
    <string name="empty" />
    <string name="sms">短信</string>
    <string name="theme">主题</string>
    <string name="theme_color">主题色</string>
    <string name="accent_color">强调色</string>
    <string name="not_set">未设置</string>
    <string name="defaults">默认</string>
    <string name="share">分享</string>
    <string name="check_new_version">检测新版本</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_success">意见反馈成功,谢谢~~</string>
    <string name="hint_contact_way">联系方式</string>
    <string name="hint_feedback">反馈意见</string>
    <string name="reward">打赏作者</string>
    <string name="reward_prompt">已经成功复制吱口令\n请打开支付宝给我转账\n金额随意，十分感谢~</string>
    <string name="reward_prompt_month">亲,分类短信app已经陪伴你了%s个月了\n如果你觉得使用体验还不错的话,给个赏吧,多少随意~</string>
    <string name="ok">好的</string>
    <string name="open">打开</string>
    <string name="mark_read">标记为已读</string>
    <string name="copy">复制</string>
    <string name="refuse">残忍拒绝</string>
    <string name="go_to_reward">去打赏</string>
    <string name="share_to">分享至:</string>
    <string name="contact_author">联系作者</string>
</resources>
