<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_group_sms"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_classify"
            android:icon="@drawable/ic_widgets_black_24dp"
            android:title="@string/classified_sms" />
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/stared_sms" />
    </group>

    <item
        android:id="@+id/nav_reward"
        android:icon="@drawable/ic_reward"
        android:title="@string/reward" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting" />

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/about" />

</menu>
