<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.windcity.yefeng.yfsms.presentation.main.MainActivity">

    <item
        android:id="@+id/action_phone"
        android:icon="@drawable/ic_call"
        android:orderInCategory="100"
        android:title="@string/call"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_to_contact"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/add_to_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_conversation"
        android:orderInCategory="100"
        android:title="@string/delete_conversation"
        app:showAsAction="never" />
</menu>
